// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingSpinner Component > Snapshot Testing > should match snapshot with all props 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/75 backdrop-blur-sm flex items-center justify-center z-50"
  >
    <div
      class="flex flex-col items-center justify-center gap-4"
    >
      <div
        class="w-12 h-12 border-3 border-gray-700 border-t-keylife-accent rounded-full animate-spin"
      />
      <p
        class="text-gray-400 text-sm"
      >
        Loading...
      </p>
    </div>
  </div>
</div>
`;

exports[`LoadingSpinner Component > Snapshot Testing > should match snapshot with default props 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center gap-4"
  >
    <div
      class="w-8 h-8 border-2 border-gray-700 border-t-keylife-accent rounded-full animate-spin"
    />
  </div>
</div>
`;
